getdonations
